--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Nav -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="#about">LAMAS&SR 2024</a>
+                <a class="navbar-brand fw-bold" href="#about">LAMAS&SR 2026</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true" aria-label="Toggle navigation">
                   <i class="bi-list"></i>
               </button>
@@ -109,7 +109,7 @@
                     </p>
                   <br>
                   <h5>SUBMISSIONS</h5>
-                    <p>Authors are invited to submit extended abstracts of up to 4 pages plus 1 page for references only, in the format of the KR 2024 conference (<a href="https://www.google.com/url?q=https://kr.org/KR2024/KR24_authors_kit.zip&source=gmail-imap&ust=1715273024000000&usg=AOvVaw1oSR6zk8PwmCgb4F75wbvb">KR24_authors_kit.zip</a>). Both published and unpublished works are welcome. Submissions are subject to a single-blind review process (submissions should not be anonymous). Submissions must be a single PDF file and will be handled via CMT, using the following button: </p>
+                    <p>Authors are invited to submit extended abstracts of up to 4 pages plus 1 page for references only, in the format of the KR 2025 conference (<a href="https://www.google.com/url?q=https://kr.org/KR2024/KR24_authors_kit.zip&source=gmail-imap&ust=1715273024000000&usg=AOvVaw1oSR6zk8PwmCgb4F75wbvb">KR24_authors_kit.zip</a>). Both published and unpublished works are welcome. Submissions are subject to a single-blind review process (submissions should not be anonymous). Submissions must be a single PDF file and will be handled via CMT, using the following button: </p>
                   <br>
                   <div class = "text-center">
                     <a href="https://cmt3.research.microsoft.com/LAMASSR2024/" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
@@ -121,8 +121,7 @@
                   </div>
                   <br>
                     <h5>VENUE</h5>
-                    <p>The workshop will be <b>ONLINE</b> and participation is free.</p>
-                    <p>Please, register at the following link: <a href="https://forms.gle/jTPqdtjPwu1oCxZ76">Registration Form</a></p>
+                    <p>The workshop will be co-located with <a href="https://www.floc26.org/</a>FloC 2026</p>
                   <br>
                   <h5>PROCEEDINGS</h5>
                     <p>Although there will be no formal proceedings, accepted extended abstracts will be made available on the workshop website. Extended and revised versions of the best papers presented at the workshop will be invited for a special issue of a leading journal.</p>
