--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#call">Call for papers</a></li>
                         <li class="nav-item"><a class="nav-link" href="#dates">Important dates</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#program">Program</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#speakers">Invited speakers</a></li>
+                      <!--  <li class="nav-item"><a class="nav-link" href="#program">Program</a></li> -->
+                       <!--  <li class="nav-item"><a class="nav-link" href="#speakers">Invited speakers</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#committee">Committee</a></li>
                     </ul>
                     <a href="https://cmt3.research.microsoft.com/LAMASSR2024/" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
