--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
         </nav>
 
-        <!-- Head -->
+        <!-- Head
         <header class="masthead" style="text-align: center">
           <img src="img/Naples.jpg" class="img-fluid" alt="...">
-         </header>
+         </header> -->
 
         <!-- About -->
         <div class="container">
