--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                   </div>
                   <br>
                     <h5>VENUE</h5>
-                    <p>The workshop will be co-located with <a href="https://www.floc26.org/> FloC 2026</a></p>
+                    <p>The workshop will be co-located with <a href="https://www.floc26.org">FLoC 2026</a>.</p>
+
                   <br>
                   <h5>PROCEEDINGS</h5>
                     <p>Although there will be no formal proceedings, accepted extended abstracts will be made available on the workshop website. Extended and revised versions of the best papers presented at the workshop will be invited for a special issue of a leading journal.</p>
