--- a/index.html
+++ b/index.html
@@ -137,24 +137,20 @@
                   <h3 class="text-center">IMPORTANT DATES</h3>
                     <div class="container py-3 h-100 text-center">
                       <ul class=" justify-content-center list-group list-group-horizontal">
-                        <li class="list-group-item ">November 17th, 2024</li>
+                        <li class="list-group-item ">April 30th, 2026</li>
                         <li class="list-group-item">Paper Submission Deadline</li>
                       </ul>
                       <br>
                       <ul class="justify-content-center list-group list-group-horizontal">
-                        <li class="list-group-item ">December 3rd, 2024</li>
+                        <li class="list-group-item ">May 14th, 2026</li>
                         <li class="list-group-item">Paper Notification</li>
                       </ul>
                       <br>
                       <ul class="justify-content-center list-group list-group-horizontal">
-                        <li class="list-group-item ">December 9th, 2024</li>
+                        <li class="list-group-item ">June 1st, 2026</li>
                         <li class="list-group-item">Registration Deadline</li>
                       </ul>
                       <br>
-                      <ul class="justify-content-center list-group list-group-horizontal">
-                        <li class="list-group-item ">December 11th, 2024</li>
-                        <li class="list-group-item">Workshop</li>
-                      </ul>
                     </div>
                   </div>
                 </div>
