--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   <h3 class="text-center">IMPORTANT DATES</h3>
                     <div class="container py-3 h-100 text-center">
                       <ul class=" justify-content-center list-group list-group-horizontal">
-                        <li class="list-group-item ">April 30th, 2026</li>
+                        <li class="list-group-item ">April 30th, 2026 (AoE) </li>
                         <li class="list-group-item">Paper Submission Deadline</li>
                       </ul>
                       <br>
