--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                   <br>
                   <h5>SUBMISSIONS</h5>
-                    <p>Authors are invited to submit extended abstracts of up to 4 pages plus 1 page for references only, in the format of the KR 2025 conference (<a href="https://www.google.com/url?q=https://kr.org/KR2024/KR24_authors_kit.zip&source=gmail-imap&ust=1715273024000000&usg=AOvVaw1oSR6zk8PwmCgb4F75wbvb">KR24_authors_kit.zip</a>). Both published and unpublished works are welcome. Submissions are subject to a single-blind review process (submissions should not be anonymous). Submissions must be a single PDF file and will be handled via CMT, using the following button: </p>
+                    <p>Authors are invited to submit extended abstracts of up to 4 pages plus 1 page for references only, in the format of the KR 2025 conference (<a href="https://kr.org/KR2026/files/KR26_authors_kit.zip">KR26_authors_kit.zip</a>). Both published and unpublished works are welcome. Submissions are subject to a single-blind review process (submissions should not be anonymous). Submissions must be a single PDF file and will be handled via CMT, using the following button: </p>
                   <br>
                   <div class = "text-center">
                     <a href="?" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
