--- a/index.html
+++ b/index.html
@@ -160,7 +160,33 @@
           </aside>
         </section>
 
-       
+               <!-- Program Committee -->
+        <section id="program-committee">
+          <h4 class="text-center">PROGRAM COMMITTEE</h4>
+          <div class="row">
+            <div class="col-lg-12">
+              <ul>
+                <li>Catalin Dima, Université Paris-Est Créteil</li>
+                <li>Chenwei Shi, Tsinghua University</li>
+                <li>Davide Catta, Université Sorbonne Paris Nord (LIPN)</li>
+                <li>Emiliano Lorini, CNRS</li>
+                <li>Fenrong Liu, Tsinghua University</li>
+                <li>Francesco Belardinelli, Imperial College London</li>
+                <li>Francesco Spegni, Università Politecnica delle Marche</li>
+                <li>Guy Avni, University of Haifa</li>
+                <li>Martin Zimmermann, Aalborg University</li>
+                <li>Munyque Mittelmann, Université Sorbonne Paris Nord (LIPN)</li>
+                <li>Raphaël Berthon, Université Paris-Saclay, CNRS, ENS Paris-Saclay</li>
+                <li>Rustam Galimullin, University of Bergen</li>
+                <li>Sasha Rubin, University of Sydney</li>
+                <li>Thomas Ågotnes, University of Bergen</li>
+                <li>Valentin Goranko, Stockholm University</li>
+                <li>Wojciech Jamroga, University of Luxembourg</li>
+                <li>Yanjing Wang, Peking University</li>
+              </ul>
+            </div>
+          </div>
+        </section>
        
         <!-- Footer-->
         <footer class="text-center py-2">
