--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         <li class="nav-item"><a class="nav-link" href="#dates">Important dates</a></li>
                       <!--  <li class="nav-item"><a class="nav-link" href="#program">Program</a></li> -->
                        <!--  <li class="nav-item"><a class="nav-link" href="#speakers">Invited speakers</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="#committee">Committee</a></li>
+                          <!--   <li class="nav-item"><a class="nav-link" href="#committee">Committee</a></li>  -->
                     </ul>
-                    <a href="https://cmt3.research.microsoft.com/LAMASSR2024/" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
+                    <a href="https://submissions.floc26.org/lamas-sr/paper/new" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
                         <span class="d-flex align-items-center">
                             <i class="bi-send-exclamation-fill me-2"></i>
                             <span class="small">SUBMISSION</span>
@@ -112,7 +112,7 @@
                     <p>Authors are invited to submit extended abstracts of up to 4 pages plus 1 page for references only, in the format of the KR 2026 conference (<a href="https://kr.org/KR2026/files/KR26_authors_kit.zip">KR26_authors_kit.zip</a>). Both published and unpublished works are welcome. Submissions are subject to a single-blind review process (submissions should not be anonymous). Submissions must be a single PDF file and will be handled via CMT, using the following button: </p>
                   <br>
                   <div class = "text-center">
-                    <a href="?" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
+                    <a href="https://submissions.floc26.org/lamas-sr/paper/new" class="btn btn-1 rounded-pill px-3 mb-2 mb-lg-0" role="button">
                       <span class="d-flex align-items-center">
                         <i class="bi-send-exclamation-fill me-2"></i>
                         <span class="small">SUBMISSION</span>
