--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                 <h5>Workshop Chair </h5>
                      
               <ul>
-                <li>Raphaël Berthon, Laboratoire Méthodes Formelles, Université Paris-Saclay, France</li>
-                <li>Antonio Di Stasio, City St George's, University of London, UK</li>
-                <li>Rustam Galimullin, University of Bergen, Norway </li>
+                <li><a href="https://home.lmf.cnrs.fr/Rberthon/">Raphaël Berthon</a>, Laboratoire Méthodes Formelles, Université Paris-Saclay, France</li>
+                <li><a href="https://antoniodistasio.github.io/">Antonio Di Stasio</a>, City St George's, University of London, UK</li>
+                <li><a href="https://rgalimullin.gitlab.io/">Rustam Galimullin</a>, University of Bergen, Norway </li>
               </ul>  
                     
                  <br>
